--- a/style.css
+++ b/style.css
@@ -13,6 +13,63 @@ body {
   overflow-x: hidden;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+*{
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.mainPage {
+    width: 1700px;
+    height: 770px;
+    margin: 56px auto;
+    background: linear-gradient(206deg, rgba(67, 26, 26, 0.00) -7.14%, #431A1A 121.86%), url('./Assets/Images/Rectangle\ 1.png');
+}
+.mainPage .mainPageInformation {
+    position: relative;
+    top: 311px;
+    left: 140px;
+    width: 736px;
+}
+.mainPage .mainPageInformation .mainPageH1{
+    color: #fff;
+    font-size: 62px;
+    font-weight: 700;
+}
+.mainPage .mainPageInformation .mainPageP {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+    opacity: 0.7;
+    margin-top: 20px;
+}
+.mainPage .mainPageInformation .btn{
+    width: 130px;
+    height: 42px;
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.60);
+    background: rgba(255, 255, 255, 0.10);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 17px;
+    margin-top: 27px;
+    cursor: pointer;
+}
+.mainPage .mainPageInformation .btn .mainPageBtnH1{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 160%;
+}
+.mainPage .mainPageInformation .btn .mainPageBtnImg {
+    width: 16px;
+    height: 14px;
+}
+/* main section*/
 button {
   width: 130px;
   height: 42px;
